@@ -46,6 +46,9 @@ They previously shipped with Npcap 1.00.
   created to dissect DLT_ETW packets so Wireshark can display the DLT_ETW packet header, its message and packet_etw dissector
   calls packet_mbim sub_dissector if its provider matches the MBIM provider GUID.
 
+* SSLKEYLOGFILE environment variable is used as path for the TLS key file, as the browsers do. An export of this variable will
+  create an environment where both the browser and Wireshark use the same file automatically.
+
 // === Removed Features and Support
 
 //=== Removed Dissectors
